updated to latest 0.5 client
